--- a/index.html
+++ b/index.html
@@ -1262,7 +1262,7 @@
         <div class="container">
             <div class="footer-heart">♥</div>
             <p class="love-message">"في كل نبضة قلب، في كل نظرة عين، في كل همسة حب، تخلد قصة (𝑺♡𝑴) في أرواحنا. حب يتجاوز الزمن، ومشاعر تتحدى المستحيل"</p>
-            <p class="copyright"><span>S♥M</span>جميع الحقوق محفوظة &copy; 2025 <span>محمد أبو السعود & سمــا</span> | قصة حب تخلد في كل قلب</p>
+            <p class="copyright"><span>S♥M</span>جميع الحقوق محفوظة &copy; 2025 <span>محمد أبو السعود & سمــا</span> | ♥ قصة حب تخلد في كل قلب ♥</p>
         </div>
     </footer>
     
